--- a/UI.kv
+++ b/UI.kv
@@ -1,28 +1,28 @@
 Screen:
     MDRaisedButton:
         text: "New"
-        size_hint:0.45, 0.29
-        pos_hint:{"center_x":0.25, "center_y":0.5}
+        size_hint:0.45, 0.44
+        pos_hint:{"center_x":0.25, "center_y":0.27}
         font_size:"20sp"
-        on_release:app.new().obi()
+        on_release:app.NEW()
 
     MDRaisedButton:
         text: "Table"
-        size_hint:0.45, 0.29
-        pos_hint:{"center_x":0.75, "center_y":0.5}
+        size_hint:0.45, 0.44
+        pos_hint:{"center_x":0.75, "center_y":0.27}
         font_size:"20sp"
-        on_release:app.table().joi()
+        on_release:app.TABLE()
 #############################################################################
     MDRaisedButton:
         text: "Directory"
-        size_hint:0.45, 0.29
-        pos_hint:{"center_x":0.25, "center_y":0.82}
+        size_hint:0.45, 0.44
+        pos_hint:{"center_x":0.25, "center_y":0.75}
         font_size:"20sp"
-        on_release: app.shashooo().goh()
+        on_release: app.DIRECTORY()
 
     MDRaisedButton:
         text: "Edit"
-        size_hint:0.45, 0.29
-        pos_hint:{"center_x":0.75, "center_y":0.82}
+        size_hint:0.45, 0.44
+        pos_hint:{"center_x":0.75, "center_y":0.75}
         font_size:"20sp"
-        on_release: app.scanning().ab()
+        on_release: app.EDIT()
