TABLE without hardcoding

--- a/UI.kv
+++ b/UI.kv
@@ -1,11 +1,12 @@
 Screen:
+#fixed
     MDRaisedButton:
         text: "New"
         size_hint:0.45, 0.44
         pos_hint:{"center_x":0.25, "center_y":0.27}
         font_size:"20sp"
         on_release:app.NEW()
-
+#TABLE fixed
     MDRaisedButton:
         text: "Table"
         size_hint:0.45, 0.44
