Directory part now has no hardcoding

--- a/UI.kv
+++ b/UI.kv
@@ -14,7 +14,7 @@ Screen:
         font_size:"20sp"
         on_release:app.TABLE()
 
-
+#directory fixed
     MDRaisedButton:
         text: "Directory"
         size_hint:0.45, 0.44
